reference/tests/snapshots/snapshot__run_reference_prql@syntax-2.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/prql/queries/syntax-2.prql
---
SELECT
  1 AS x,
  2 AS y,
  1 AS a,
  2 AS b,
  1 AS c,
  2 AS d
