reference/tests/snapshots/snapshot__run_reference_prql@syntax-3.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/prql/queries/syntax-3.prql
---
SELECT
  first_name
FROM
  employees
