reference/tests/snapshots/snapshot__run_reference_prql@syntax-6.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/prql/queries/syntax-6.prql
---
SELECT
  AVG(salary)
FROM
  employees
