reference/tests/snapshots/snapshot__run_reference_prql@tables-0.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/prql/queries/tables-0.prql
---
WITH table_0 AS (
  SELECT
    employees.*
  FROM
    employees
  ORDER BY
    salary
  LIMIT
    50
), top_50 AS (
  SELECT
    SUM(salary)
  FROM
    table_0
)
SELECT
  another_table.*
FROM
  another_table
